--- a/src/components/spinner/Spinner.scss
+++ b/src/components/spinner/Spinner.scss
@@ -15,7 +15,16 @@
     &.winner {
         background-image: url("https://i.pinimg.com/originals/f0/f4/84/f0f48450f6e8447740751d57b5becd59.gif");
         background-size: cover;
-              
+        animation: fadeIn 1s ease-out infinite 1s;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
       }
 
       .heading{
@@ -43,7 +52,7 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        font-size: 1.7vh;
+        font-size: 2vh;
         display: flex;
         align-items: center;
         font-weight: 400;
@@ -64,7 +73,6 @@
           }
         }
 
-
         @include desktop{
           font-size: 4vh;
           right: 12vh;
@@ -75,7 +83,7 @@
         position: absolute;
         top: 20px;
         left: 25px;
-        font-size: 1.7vh;
+        font-size: 2vh;
         display: flex;
         align-items: center;
         font-weight: 500;
@@ -125,10 +133,10 @@
 button{
     background-color: rgb(51,171,224);
     border: none;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-top: .8rem;
-    padding-bottom: .8rem;
+    padding-left: .9rem;
+    padding-right: .9rem;
+    padding-top: .6rem;
+    padding-bottom: .6rem;
     border-radius: 10px;
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
